Add meta description for SEO

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Free Forge Calculator for The Forge Roblox game. Calculate crafting resources, materials, and costs instantly. Optimize your forging strategy with our tool.">
     <title>The Forge Calculator - Roblox Resource & Crafting Tool</title>
     <style>
         * {
