Add meta keywords for SEO optimization

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Free Forge Calculator for The Forge Roblox game. Calculate crafting resources, materials, and costs instantly. Optimize your forging strategy with our tool.">
+    <meta name="keywords" content="forge calculator, forge calculator roblox, the forge calculator, roblox forge, forge roblox calculator, roblox crafting calculator, the forge game">
     <title>The Forge Calculator - Roblox Resource & Crafting Tool</title>
     <style>
         * {
