--- a/index.html
+++ b/index.html
@@ -362,12 +362,12 @@
     </section>
 
     <!-- Calculator Section -->
-    <section id="calculator" class="calculator container">
+    <section id="calculator" class="calculator" style="max-width: none; padding: 3rem 20px;">
         <h3>Forge Calculator Tool</h3>
         <div class="gacha-simulator-wrapper" style="width: 100%; margin: 20px 0; border-radius: 12px; overflow: hidden; box-shadow: 0 8px 32px rgba(0, 0, 0, 0.15);">
             <iframe 
                 src="https://blox-informer-gachas.github.io/blox-informer-gachas/gachas/the-forge-crafting-calculator.html" 
-                style="width: 100%; height: 755px; border: none; display: block;"
+                style="width: 100%; height: 1400px; border: none; display: block;"
                 title="The Forge Crafting Calculator"
                 loading="lazy"
                 allowfullscreen>
