Update content with ore-based descriptions and add SEO files (robots.txt, sitemap.xml)

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
     <section class="hero">
         <div class="container">
             <h2>The Forge Calculator</h2>
-            <p>Master your crafting strategy in The Forge with our powerful resource calculator. Calculate materials, optimize your forge calculator workflow, and maximize your efficiency in Roblox's premier crafting game.</p>
+            <p>The Forge Calculator is an all-in-one tool designed to help you when forging weapons and armor in The Forge. Our forge calculator is built for both beginners enhancing their knowledge of the forging system and experienced players seeking optimal builds and trait setups.</p>
         </div>
     </section>
 
@@ -378,23 +378,31 @@
     <!-- Features Section -->
     <section id="features" class="features">
         <div class="container">
-            <h3>Forge Calculator Features</h3>
+            <h3>The Forge Calculator Features</h3>
             <div class="features-grid">
                 <div class="feature-card">
-                    <h4>🎯 Accurate Calculations</h4>
-                    <p>Our forge calculator provides precise resource requirements for every item in The Forge, ensuring you never waste materials.</p>
+                    <h4>⚔️ Weapon & Armor Classes</h4>
+                    <p>The Forge Calculator shows which weapon or armor class you'll craft based on your ore combinations, helping you plan your builds effectively.</p>
                 </div>
                 <div class="feature-card">
-                    <h4>⚡ Real-Time Updates</h4>
-                    <p>The forge calculator instantly updates calculations as you adjust parameters, giving you immediate feedback on your crafting plans.</p>
+                    <h4>📊 Optimal Ore Amounts</h4>
+                    <p>Our forge calculator calculates the optimal number of ores needed to increase chances of crafting specific weapon or armor sets with desired traits.</p>
                 </div>
                 <div class="feature-card">
-                    <h4>📊 Resource Optimization</h4>
-                    <p>Use our forge calculator to plan your resource gathering efficiently and maximize your crafting output in The Forge.</p>
+                    <h4>⚡ Real-Time Results</h4>
+                    <p>The Forge Calculator processes your inputs and presents results of potential crafts in real time, eliminating manual calculations.</p>
                 </div>
                 <div class="feature-card">
-                    <h4>🔧 All Item Types</h4>
-                    <p>The forge calculator supports every craftable item including weapons, armor, tools, and upgrades for complete coverage.</p>
+                    <h4>🎯 Modifier Multipliers</h4>
+                    <p>See final modifier multipliers and trait strength percentages with our forge calculator to optimize your forging strategy.</p>
+                </div>
+                <div class="feature-card">
+                    <h4>✨ Trait Activation</h4>
+                    <p>The Forge Calculator shows whether ore traits will be active and how strong the applied traits will be for your craft.</p>
+                </div>
+                <div class="feature-card">
+                    <h4>🔧 Complete Coverage</h4>
+                    <p>Our forge calculator supports all ore combinations and trait setups for comprehensive forging assistance in The Forge.</p>
                 </div>
             </div>
         </div>
@@ -404,35 +412,36 @@
     <section id="what-is" class="content-section">
         <div class="container">
             <h3>What is The Forge Calculator?</h3>
-            <p>The Forge Calculator is an essential tool designed specifically for players of The Forge on Roblox. This comprehensive forge calculator helps you determine exactly how many resources you need to craft any item in the game. Whether you're forging your first basic sword or upgrading legendary armor, our forge calculator takes the guesswork out of resource management.</p>
-            <p>In The Forge, players must gather various materials like iron ore, coal, gold, and precious gems to create powerful weapons and equipment. Without proper planning, you might find yourself short on critical resources or wasting time gathering materials you don't need. That's where our forge calculator becomes invaluable - it provides instant, accurate calculations for all your crafting needs.</p>
-            <p>The forge calculator accounts for multiple factors including item type, tier level, quantity, and upgrade levels. This means you can plan complex crafting sessions involving multiple items and upgrades all at once. The forge calculator interface is intuitive and user-friendly, making it accessible for both new players learning the ropes and experienced crafters optimizing their workflow.</p>
+            <p>The Forge Calculator is an all-in-one tool designed specifically for players forging weapons and armor in The Forge on Roblox. Our comprehensive forge calculator helps you determine optimal ore combinations and trait setups without manual calculations. Whether you're a beginner learning the forging system or an experienced player seeking optimal builds, The Forge Calculator takes the guesswork out of crafting.</p>
+            <p>Instead of manually calculating which ore combinations will grant you the best modifiers, or the number of ores needed to obtain the highest percentages of their corresponding traits, simply use our forge calculator to process your inputs and present results in real time. The Forge Calculator shows you which weapon or armor class you'll craft, optimal ore amounts, final modifier multipliers, and whether ore traits will be active.</p>
+            <p>When adding ores to The Forge Calculator tool, you'll see how strong the applied traits will be and the optimal number of ores needed to increase chances of crafting a specific weapon or armor set. Our forge calculator interface is intuitive and user-friendly, making it accessible for all players looking to optimize their forging strategy in The Forge.</p>
         </div>
     </section>
 
     <!-- How To Section -->
     <section id="how-to" class="content-section">
         <div class="container">
-            <h3>How to Use the Forge Calculator</h3>
-            <p>Using our forge calculator is straightforward and designed to save you time. Follow these simple steps to calculate your resource requirements:</p>
+            <h3>How to Use The Forge Calculator</h3>
+            <p>Using The Forge Calculator is straightforward and designed to save you time when forging weapons and armor. Follow these simple steps to optimize your crafting strategy:</p>
             <ul>
-                <li><strong>Select Item Type:</strong> Choose what you want to craft using the forge calculator - swords, axes, pickaxes, armor, or shields.</li>
-                <li><strong>Choose Tier Level:</strong> The forge calculator supports all five tiers from Basic to Legendary. Higher tiers require more resources.</li>
-                <li><strong>Enter Quantity:</strong> Tell the forge calculator how many items you want to craft. You can calculate for bulk crafting sessions.</li>
-                <li><strong>Set Upgrade Level:</strong> If you're planning upgrades, input the target level into the forge calculator for accurate material counts.</li>
-                <li><strong>Calculate:</strong> Click the calculate button and the forge calculator will instantly display all required resources and total costs.</li>
+                <li><strong>Add Your Ores:</strong> Input the ores you plan to use in The Forge Calculator. The tool will process your ore combinations instantly.</li>
+                <li><strong>View Weapon/Armor Class:</strong> The Forge Calculator shows which weapon or armor class you'll craft based on your ore selection.</li>
+                <li><strong>Check Optimal Amounts:</strong> Our forge calculator displays the optimal ore amounts needed for your desired craft and trait percentages.</li>
+                <li><strong>Review Modifiers:</strong> See final modifier multipliers calculated by The Forge Calculator to understand your craft's potential strength.</li>
+                <li><strong>Verify Trait Activation:</strong> The forge calculator indicates whether ore traits will be active and how strong the applied traits will be.</li>
+                <li><strong>Optimize Build:</strong> Use The Forge Calculator to experiment with different ore combinations and find the optimal setup for your weapon or armor.</li>
             </ul>
-            <p>The forge calculator results show you exactly how much iron ore, coal, gold, and gems you need, plus the total coin cost. You can adjust any parameter and recalculate instantly, making the forge calculator perfect for experimenting with different crafting strategies before committing your resources in The Forge.</p>
+            <p>The Forge Calculator presents results in real time as you adjust your ore inputs. You can experiment with different combinations using our forge calculator before committing resources in The Forge, ensuring you achieve the best possible modifiers and trait setups for your builds.</p>
         </div>
     </section>
 
     <!-- Why Section -->
     <section id="why" class="content-section">
         <div class="container">
-            <h3>Why Use Our Forge Calculator?</h3>
-            <p>The Forge is a complex game with intricate crafting mechanics, and managing resources efficiently can be challenging. Our forge calculator solves this problem by providing instant, accurate calculations that help you make informed decisions about your crafting strategy.</p>
-            <p>Without a forge calculator, players often waste valuable time gathering excess materials or find themselves unable to complete crafts due to resource shortages. Our forge calculator eliminates these frustrations by showing you exactly what you need before you start. This means more time actually playing and less time doing mental math or trial-and-error crafting.</p>
-            <p>The forge calculator is particularly valuable for players who want to optimize their gameplay. By knowing exact resource requirements, you can plan efficient gathering routes, prioritize which materials to farm, and make strategic decisions about which items to craft first. The forge calculator essentially acts as your personal crafting assistant, helping you progress faster and more efficiently through The Forge.</p>
+            <h3>Why Use The Forge Calculator?</h3>
+            <p>The Forge has intricate forging mechanics with complex ore combinations and trait systems. The Forge Calculator solves this complexity by providing instant, accurate calculations that help you make informed decisions about your weapon and armor builds without manual calculations.</p>
+            <p>Without The Forge Calculator, players waste valuable time manually calculating which ore combinations grant the best modifiers or determining the number of ores needed for optimal trait percentages. Our forge calculator eliminates these frustrations by processing your inputs and presenting results in real time, showing you exactly which weapon or armor class you'll craft and how strong your traits will be.</p>
+            <p>The Forge Calculator is particularly valuable for players seeking optimal builds and trait setups. Whether you're a beginner enhancing your knowledge of the forging system or an experienced player optimizing modifier multipliers, our forge calculator acts as your personal forging assistant. By using The Forge Calculator, you can experiment with different ore combinations, verify trait activation, and ensure you achieve the best possible results before committing resources in The Forge.</p>
         </div>
     </section>
 
@@ -441,24 +450,24 @@
         <div class="container">
             <h3>Frequently Asked Questions</h3>
             <div class="faq-item">
-                <h4>Is this forge calculator accurate for The Forge on Roblox?</h4>
-                <p>Yes, our forge calculator uses the latest game data to provide accurate resource calculations for all items in The Forge. We regularly update the forge calculator to reflect any game changes.</p>
+                <h4>Is The Forge Calculator accurate for The Forge on Roblox?</h4>
+                <p>Yes, The Forge Calculator uses the latest game data to provide accurate ore combination calculations, modifier multipliers, and trait percentages for all weapons and armor in The Forge. We regularly update our forge calculator to reflect any game changes.</p>
             </div>
             <div class="faq-item">
-                <h4>Can the forge calculator handle bulk crafting calculations?</h4>
-                <p>Absolutely! The forge calculator supports quantity inputs up to 999 items, making it perfect for planning large crafting sessions or calculating resources for multiple items at once.</p>
+                <h4>What can I see when using The Forge Calculator?</h4>
+                <p>When adding ores to The Forge Calculator, you'll see which weapon or armor class you'll craft, optimal ore amounts, final modifier multipliers, whether ore traits will be active, how strong the applied traits will be, and the optimal number of ores needed to increase crafting chances.</p>
             </div>
             <div class="faq-item">
-                <h4>Does the forge calculator include upgrade costs?</h4>
-                <p>Yes, our forge calculator factors in upgrade levels from 0 to 10, showing you the complete resource requirements including all upgrade materials needed.</p>
+                <h4>Does The Forge Calculator work in real time?</h4>
+                <p>Yes! The Forge Calculator processes your inputs and presents results of potential crafts in real time. Our forge calculator eliminates the need for manual calculations, giving you instant feedback as you adjust ore combinations.</p>
             </div>
             <div class="faq-item">
-                <h4>Is the forge calculator free to use?</h4>
-                <p>Yes, this forge calculator is completely free. We created it to help The Forge community optimize their gameplay and crafting strategies without any cost.</p>
+                <h4>Is The Forge Calculator free to use?</h4>
+                <p>Yes, The Forge Calculator is completely free. We created this forge calculator to help The Forge community optimize their forging strategy, whether you're a beginner or experienced player seeking optimal builds.</p>
             </div>
             <div class="faq-item">
-                <h4>Can I use the forge calculator on mobile devices?</h4>
-                <p>Yes, the forge calculator is fully responsive and works perfectly on smartphones, tablets, and desktop computers. Calculate your resources anywhere, anytime.</p>
+                <h4>Can I use The Forge Calculator on mobile devices?</h4>
+                <p>Yes, The Forge Calculator is fully responsive and works perfectly on smartphones, tablets, and desktop computers. Use our forge calculator anywhere, anytime to plan your weapon and armor crafts in The Forge.</p>
             </div>
         </div>
     </section>
