Change section headings to h2 and add canonical URL

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Free Forge Calculator for The Forge Roblox game. Calculate crafting resources, materials, and costs instantly. Optimize your forging strategy with our tool.">
     <meta name="keywords" content="forge calculator, forge calculator roblox, the forge calculator, roblox forge, forge roblox calculator, roblox crafting calculator, the forge game">
+    <link rel="canonical" href="https://ginginli.github.io/forge/">
     <title>The Forge Calculator - Roblox Resource & Crafting Tool</title>
     <style>
         * {
@@ -378,7 +379,7 @@
     <!-- Features Section -->
     <section id="features" class="features">
         <div class="container">
-            <h3>The Forge Calculator Features</h3>
+            <h2>The Forge Calculator Features</h2>
             <div class="features-grid">
                 <div class="feature-card">
                     <h4>⚔️ Weapon & Armor Classes</h4>
@@ -411,7 +412,7 @@
     <!-- What Is Section -->
     <section id="what-is" class="content-section">
         <div class="container">
-            <h3>What is The Forge Calculator?</h3>
+            <h2>What is The Forge Calculator?</h2>
             <p>The Forge Calculator is an all-in-one tool designed specifically for players forging weapons and armor in The Forge on Roblox. Our comprehensive forge calculator helps you determine optimal ore combinations and trait setups without manual calculations. Whether you're a beginner learning the forging system or an experienced player seeking optimal builds, The Forge Calculator takes the guesswork out of crafting.</p>
             <p>Instead of manually calculating which ore combinations will grant you the best modifiers, or the number of ores needed to obtain the highest percentages of their corresponding traits, simply use our forge calculator to process your inputs and present results in real time. The Forge Calculator shows you which weapon or armor class you'll craft, optimal ore amounts, final modifier multipliers, and whether ore traits will be active.</p>
             <p>When adding ores to The Forge Calculator tool, you'll see how strong the applied traits will be and the optimal number of ores needed to increase chances of crafting a specific weapon or armor set. Our forge calculator interface is intuitive and user-friendly, making it accessible for all players looking to optimize their forging strategy in The Forge.</p>
@@ -421,7 +422,7 @@
     <!-- How To Section -->
     <section id="how-to" class="content-section">
         <div class="container">
-            <h3>How to Use The Forge Calculator</h3>
+            <h2>How to Use The Forge Calculator</h2>
             <p>Using The Forge Calculator is straightforward and designed to save you time when forging weapons and armor. Follow these simple steps to optimize your crafting strategy:</p>
             <ul>
                 <li><strong>Add Your Ores:</strong> Input the ores you plan to use in The Forge Calculator. The tool will process your ore combinations instantly.</li>
@@ -438,7 +439,7 @@
     <!-- Why Section -->
     <section id="why" class="content-section">
         <div class="container">
-            <h3>Why Use The Forge Calculator?</h3>
+            <h2>Why Use The Forge Calculator?</h2>
             <p>The Forge has intricate forging mechanics with complex ore combinations and trait systems. The Forge Calculator solves this complexity by providing instant, accurate calculations that help you make informed decisions about your weapon and armor builds without manual calculations.</p>
             <p>Without The Forge Calculator, players waste valuable time manually calculating which ore combinations grant the best modifiers or determining the number of ores needed for optimal trait percentages. Our forge calculator eliminates these frustrations by processing your inputs and presenting results in real time, showing you exactly which weapon or armor class you'll craft and how strong your traits will be.</p>
             <p>The Forge Calculator is particularly valuable for players seeking optimal builds and trait setups. Whether you're a beginner enhancing your knowledge of the forging system or an experienced player optimizing modifier multipliers, our forge calculator acts as your personal forging assistant. By using The Forge Calculator, you can experiment with different ore combinations, verify trait activation, and ensure you achieve the best possible results before committing resources in The Forge.</p>
@@ -448,7 +449,7 @@
     <!-- FAQ Section -->
     <section id="faq" class="faq">
         <div class="container">
-            <h3>Frequently Asked Questions</h3>
+            <h2>Frequently Asked Questions</h2>
             <div class="faq-item">
                 <h4>Is The Forge Calculator accurate for The Forge on Roblox?</h4>
                 <p>Yes, The Forge Calculator uses the latest game data to provide accurate ore combination calculations, modifier multipliers, and trait percentages for all weapons and armor in The Forge. We regularly update our forge calculator to reflect any game changes.</p>
