Remove calculator h3 title and rewrite hero section text

--- a/index.html
+++ b/index.html
@@ -358,13 +358,12 @@
     <section class="hero">
         <div class="container">
             <h2>The Forge Calculator</h2>
-            <p>The Forge Calculator is an all-in-one tool designed to help you when forging weapons and armor in The Forge. Our forge calculator is built for both beginners enhancing their knowledge of the forging system and experienced players seeking optimal builds and trait setups.</p>
+            <p>Master your weapon and armor crafting with The Forge Calculator - a comprehensive tool that helps you optimize ore combinations and trait setups. Whether you're new to the forging system or an expert player perfecting your builds, our forge calculator provides real-time calculations for all your crafting needs in The Forge.</p>
         </div>
     </section>
 
     <!-- Calculator Section -->
     <section id="calculator" class="calculator" style="max-width: none; padding: 3rem 20px;">
-        <h3>Forge Calculator Tool</h3>
         <div class="gacha-simulator-wrapper" style="width: 100%; margin: 20px 0; border-radius: 12px; overflow: hidden; box-shadow: 0 8px 32px rgba(0, 0, 0, 0.15);">
             <iframe 
                 src="https://blox-informer-gachas.github.io/blox-informer-gachas/gachas/the-forge-crafting-calculator.html" 
