Rewrite What Is section paragraph to avoid duplicate content

--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
         <div class="container">
             <h2>What is The Forge Calculator?</h2>
             <p>The Forge Calculator is an all-in-one tool designed specifically for players forging weapons and armor in The Forge on Roblox. Our comprehensive forge calculator helps you determine optimal ore combinations and trait setups without manual calculations. Whether you're a beginner learning the forging system or an experienced player seeking optimal builds, The Forge Calculator takes the guesswork out of crafting.</p>
-            <p>Instead of manually calculating which ore combinations will grant you the best modifiers, or the number of ores needed to obtain the highest percentages of their corresponding traits, simply use our forge calculator to process your inputs and present results in real time. The Forge Calculator shows you which weapon or armor class you'll craft, optimal ore amounts, final modifier multipliers, and whether ore traits will be active.</p>
+            <p>Skip the tedious math of figuring out which ores give you the strongest modifiers or how many you need for maximum trait percentages. Our forge calculator instantly processes your ore selections and displays real-time results. The Forge Calculator reveals your weapon or armor class, optimal ore quantities, final modifier multipliers, and trait activation status.</p>
             <p>When adding ores to The Forge Calculator tool, you'll see how strong the applied traits will be and the optimal number of ores needed to increase chances of crafting a specific weapon or armor set. Our forge calculator interface is intuitive and user-friendly, making it accessible for all players looking to optimize their forging strategy in The Forge.</p>
         </div>
     </section>
