--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
     <section class="hero">
         <div class="container">
             <h2>The Forge Calculator</h2>
-            <p>Master your weapon and armor crafting with The Forge Calculator - a comprehensive tool that helps you optimize ore combinations and trait setups. Whether you're new to the forging system or an expert player perfecting your builds, our forge calculator provides real-time calculations for all your crafting needs in The Forge.</p>
+            <p>Master your weapon and armor crafting with The Forge Calculator - a comprehensive tool that helps you optimize ore combinations and trait setups in The Forge Roblox game. Whether you're new to the forging system or an expert player perfecting your builds, our forge calculator provides real-time calculations for all your crafting needs.</p>
         </div>
     </section>
 
@@ -416,7 +416,7 @@
                 </div>
                 <div class="feature-card">
                     <h3>🔧 Complete Coverage</h3>
-                    <p>Our forge calculator supports all ore combinations and trait setups for comprehensive forging assistance in The Forge.</p>
+                    <p>Our forge calculator supports all ore combinations and trait setups for comprehensive forging assistance in The Forge Roblox game.</p>
                 </div>
             </div>
         </div>
@@ -436,7 +436,7 @@
     <section id="how-to" class="content-section">
         <div class="container">
             <h2>How to Use The Forge Calculator</h2>
-            <p>Using The Forge Calculator is straightforward and designed to save you time when forging weapons and armor. Follow these simple steps to optimize your crafting strategy:</p>
+            <p>Using The Forge Calculator is straightforward and designed to save you time when forging weapons and armor in Roblox. Follow these simple steps to optimize your crafting strategy:</p>
             <ul>
                 <li><strong>Add Your Ores:</strong> Input the ores you plan to use in The Forge Calculator. The tool will process your ore combinations instantly.</li>
                 <li><strong>View Weapon/Armor Class:</strong> The Forge Calculator shows which weapon or armor class you'll craft based on your ore selection.</li>
@@ -453,7 +453,7 @@
     <section id="why" class="content-section">
         <div class="container">
             <h2>Why Use The Forge Calculator?</h2>
-            <p>The Forge has intricate forging mechanics with complex ore combinations and trait systems. The Forge Calculator solves this complexity by providing instant, accurate calculations that help you make informed decisions about your weapon and armor builds without manual calculations.</p>
+            <p>The Forge Roblox game has intricate forging mechanics with complex ore combinations and trait systems. The Forge Calculator solves this complexity by providing instant, accurate calculations that help you make informed decisions about your weapon and armor builds without manual calculations.</p>
             <p>Without The Forge Calculator, players waste valuable time manually calculating which ore combinations grant the best modifiers or determining the number of ores needed for optimal trait percentages. Our forge calculator eliminates these frustrations by processing your inputs and presenting results in real time, showing you exactly which weapon or armor class you'll craft and how strong your traits will be.</p>
             <p>The Forge Calculator is particularly valuable for players seeking optimal builds and trait setups. Whether you're a beginner enhancing your knowledge of the forging system or an experienced player optimizing modifier multipliers, our forge calculator acts as your personal forging assistant. By using The Forge Calculator, you can experiment with different ore combinations, verify trait activation, and ensure you achieve the best possible results before committing resources in The Forge.</p>
         </div>
