Increase 'Roblox Forge' keyword density throughout content

--- a/index.html
+++ b/index.html
@@ -396,11 +396,11 @@
             <div class="features-grid">
                 <div class="feature-card">
                     <h3>⚔️ Weapon & Armor Classes</h3>
-                    <p>The Forge Calculator shows which weapon or armor class you'll craft based on your ore combinations, helping you plan your builds effectively.</p>
+                    <p>The Forge Calculator shows which weapon or armor class you'll craft in Roblox Forge based on your ore combinations, helping you plan your builds effectively.</p>
                 </div>
                 <div class="feature-card">
                     <h3>📊 Optimal Ore Amounts</h3>
-                    <p>Our forge calculator calculates the optimal number of ores needed to increase chances of crafting specific weapon or armor sets with desired traits.</p>
+                    <p>Our Roblox Forge calculator calculates the optimal number of ores needed to increase chances of crafting specific weapon or armor sets with desired traits.</p>
                 </div>
                 <div class="feature-card">
                     <h3>⚡ Real-Time Results</h3>
@@ -408,11 +408,11 @@
                 </div>
                 <div class="feature-card">
                     <h3>🎯 Modifier Multipliers</h3>
-                    <p>See final modifier multipliers and trait strength percentages with our forge calculator to optimize your forging strategy.</p>
+                    <p>See final modifier multipliers and trait strength percentages with our Roblox Forge calculator to optimize your forging strategy.</p>
                 </div>
                 <div class="feature-card">
                     <h3>✨ Trait Activation</h3>
-                    <p>The Forge Calculator shows whether ore traits will be active and how strong the applied traits will be for your craft.</p>
+                    <p>The Roblox Forge Calculator shows whether ore traits will be active and how strong the applied traits will be for your craft.</p>
                 </div>
                 <div class="feature-card">
                     <h3>🔧 Complete Coverage</h3>
@@ -427,8 +427,8 @@
         <div class="container">
             <h2>What is The Forge Calculator?</h2>
             <p>The Forge Calculator is an all-in-one tool designed specifically for players forging weapons and armor in The Forge on Roblox. Our comprehensive forge calculator helps you determine optimal ore combinations and trait setups without manual calculations. Whether you're a beginner learning the forging system or an experienced player seeking optimal builds, The Forge Calculator takes the guesswork out of crafting.</p>
-            <p>Skip the tedious math of figuring out which ores give you the strongest modifiers or how many you need for maximum trait percentages. Our forge calculator instantly processes your ore selections and displays real-time results. The Forge Calculator reveals your weapon or armor class, optimal ore quantities, final modifier multipliers, and trait activation status.</p>
-            <p>When adding ores to The Forge Calculator tool, you'll see how strong the applied traits will be and the optimal number of ores needed to increase chances of crafting a specific weapon or armor set. Our forge calculator interface is intuitive and user-friendly, making it accessible for all players looking to optimize their forging strategy in The Forge.</p>
+            <p>Skip the tedious math of figuring out which ores give you the strongest modifiers or how many you need for maximum trait percentages. Our Roblox Forge calculator instantly processes your ore selections and displays real-time results. The Roblox Forge Calculator reveals your weapon or armor class, optimal ore quantities, final modifier multipliers, and trait activation status.</p>
+            <p>When adding ores to The Roblox Forge Calculator tool, you'll see how strong the applied traits will be and the optimal number of ores needed to increase chances of crafting a specific weapon or armor set. Our Roblox Forge calculator interface is intuitive and user-friendly, making it accessible for all players looking to optimize their forging strategy.</p>
         </div>
     </section>
 
@@ -454,7 +454,7 @@
         <div class="container">
             <h2>Why Use The Forge Calculator?</h2>
             <p>The Forge Roblox game has intricate forging mechanics with complex ore combinations and trait systems. The Forge Calculator solves this complexity by providing instant, accurate calculations that help you make informed decisions about your weapon and armor builds without manual calculations.</p>
-            <p>Without The Forge Calculator, players waste valuable time manually calculating which ore combinations grant the best modifiers or determining the number of ores needed for optimal trait percentages. Our forge calculator eliminates these frustrations by processing your inputs and presenting results in real time, showing you exactly which weapon or armor class you'll craft and how strong your traits will be.</p>
+            <p>Without The Roblox Forge Calculator, players waste valuable time manually calculating which ore combinations grant the best modifiers or determining the number of ores needed for optimal trait percentages. Our Roblox Forge calculator eliminates these frustrations by processing your inputs and presenting results in real time, showing you exactly which weapon or armor class you'll craft and how strong your traits will be.</p>
             <p>The Forge Calculator is particularly valuable for players seeking optimal builds and trait setups. Whether you're a beginner enhancing your knowledge of the forging system or an experienced player optimizing modifier multipliers, our forge calculator acts as your personal forging assistant. By using The Forge Calculator, you can experiment with different ore combinations, verify trait activation, and ensure you achieve the best possible results before committing resources in The Forge.</p>
         </div>
     </section>
