Update page title and meta tags to include 'Roblox Forge' keyword

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://ginginli.github.io/forge/">
-    <meta property="og:title" content="The Forge Calculator - Roblox Resource & Crafting Tool">
+    <meta property="og:title" content="Roblox Forge Calculator - The Forge Crafting Tool">
     <meta property="og:description" content="Master your weapon and armor crafting with The Forge Calculator. Optimize ore combinations and trait setups with real-time calculations for The Forge on Roblox.">
-    <meta property="og:site_name" content="The Forge Calculator">
+    <meta property="og:site_name" content="Roblox Forge Calculator">
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://ginginli.github.io/forge/">
-    <meta name="twitter:title" content="The Forge Calculator - Roblox Resource & Crafting Tool">
+    <meta name="twitter:title" content="Roblox Forge Calculator - The Forge Crafting Tool">
     <meta name="twitter:description" content="Master your weapon and armor crafting with The Forge Calculator. Optimize ore combinations and trait setups with real-time calculations for The Forge on Roblox.">
     
-    <title>The Forge Calculator - Roblox Resource & Crafting Tool</title>
+    <title>Roblox Forge Calculator - The Forge Crafting Tool</title>
     <style>
         * {
             margin: 0;
