Add AIStage link to footer

--- a/index.html
+++ b/index.html
@@ -492,6 +492,7 @@
             <p>&copy; 2024 Forge Calculator. Created for The Forge community on Roblox.</p>
             <p>This forge calculator is a fan-made tool and is not officially affiliated with Roblox or The Forge game developers.</p>
             <p>Need help? Contact us or visit our <a href="#">community forum</a></p>
+            <p>Powered by <a href="https://aistage.net" title="AIStage">AIStage</a></p>
         </div>
     </footer>
 
