Add Good AI Tools badge to footer

--- a/index.html
+++ b/index.html
@@ -493,6 +493,7 @@
             <p>This forge calculator is a fan-made tool and is not officially affiliated with Roblox or The Forge game developers.</p>
             <p>Need help? Contact us or visit our <a href="#">community forum</a></p>
             <p>Powered by <a href="https://aistage.net" title="AIStage">AIStage</a></p>
+            <p><a target="_blank" href="https://goodaitools.com"><img src="https://goodaitools.com/assets/images/badge.png" alt="Good AI Tools" height="54"></a></p>
         </div>
     </footer>
 
