--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
         <div class="container">
             <p>&copy; 2024 Forge Calculator. Created for The Forge community on Roblox.</p>
             <p>This forge calculator is a fan-made tool and is not officially affiliated with Roblox or The Forge game developers.</p>
-            <p>Need help? Contact us or visit our <a href="#">community forum</a></p>
+            <p><a href="/privacy-policy.html">Privacy Policy</a> | <a href="/terms-of-service.html">Terms of Service</a></p>
             <p>Powered by <a href="https://aistage.net" title="AIStage">AIStage</a></p>
             <p><a target="_blank" href="https://goodaitools.com"><img src="https://goodaitools.com/assets/images/badge.png" alt="Good AI Tools" height="54"></a></p>
         </div>
