Add introducing calculator blog article in both MD and HTML formats

--- a/blog.html
+++ b/blog.html
@@ -139,12 +139,12 @@
         <div class="blog-grid">
             <div class="blog-card">
                 <div class="blog-card-header">
-                    <h2>The Forge Beginner's Complete Guide</h2>
-                    <div class="blog-meta">December 4, 2024 • 5 min read</div>
+                    <h2>Introducing The Forge Calculator</h2>
+                    <div class="blog-meta">December 4, 2024 • 8 min read</div>
                 </div>
                 <div class="blog-card-body">
-                    <p>New to The Forge? Learn everything you need to know about forging weapons and armor in Roblox. This comprehensive guide covers ore types, basic mechanics, and how to use our calculator effectively.</p>
-                    <a href="/blog/beginners-guide.html" class="read-more">Read More →</a>
+                    <p>Discover how The Forge Calculator can revolutionize your crafting experience in Roblox. Learn about our features, why we built this tool, and how it helps both beginners and experienced players optimize their forging strategy.</p>
+                    <a href="/blog-introducing-calculator.html" class="read-more">Read More →</a>
                 </div>
             </div>
 
