--- a/index.html
+++ b/index.html
@@ -493,7 +493,10 @@
             <p>This forge calculator is a fan-made tool and is not officially affiliated with Roblox or The Forge game developers.</p>
             <p><a href="/blog.html">Blog</a> | <a href="/privacy-policy.html">Privacy Policy</a> | <a href="/terms-of-service.html">Terms of Service</a> | <a href="https://ovk.to/id34926" target="_blank">OVK</a></p>
             <p>Powered by <a href="https://aistage.net" title="AIStage">AIStage</a></p>
-            <p><a target="_blank" href="https://goodaitools.com"><img src="https://goodaitools.com/assets/images/badge.png" alt="Good AI Tools" height="54"></a></p>
+            <p>
+                <a target="_blank" href="https://goodaitools.com"><img src="https://goodaitools.com/assets/images/badge.png" alt="Good AI Tools" height="54"></a>
+                <a href="https://www.showmebest.ai" target="_blank"><img src="https://www.showmebest.ai/badge/feature-badge-white.webp" alt="Featured on ShowMeBestAI" width="220" height="60"></a>
+            </p>
         </div>
     </footer>
 
