--- a/index.html
+++ b/index.html
@@ -360,6 +360,7 @@
             <h1>⚒️ Forge Calculator</h1>
             <nav>
                 <a href="#calculator">Calculator</a>
+                <a href="/codes.html">Codes</a>
                 <a href="#features">Features</a>
                 <a href="#what-is">What Is</a>
                 <a href="#how-to">How To</a>
@@ -491,7 +492,7 @@
         <div class="container">
             <p>&copy; 2024 Forge Calculator. Created for The Forge community on Roblox.</p>
             <p>This forge calculator is a fan-made tool and is not officially affiliated with Roblox or The Forge game developers.</p>
-            <p><a href="/blog.html">Blog</a> | <a href="/privacy-policy.html">Privacy Policy</a> | <a href="/terms-of-service.html">Terms of Service</a> | <a href="https://ovk.to/id34926" target="_blank">OVK</a></p>
+            <p><a href="/codes.html">Codes</a> | <a href="/blog.html">Blog</a> | <a href="/privacy-policy.html">Privacy Policy</a> | <a href="/terms-of-service.html">Terms of Service</a> | <a href="https://ovk.to/id34926" target="_blank">OVK</a></p>
             <p>Powered by <a href="https://aistage.net" title="AIStage">AIStage</a></p>
             <p>
                 <a target="_blank" href="https://goodaitools.com"><img src="https://goodaitools.com/assets/images/badge.png" alt="Good AI Tools" height="54"></a>
