Update codes page with verification notice and community contribution section

--- a/codes.html
+++ b/codes.html
@@ -305,7 +305,9 @@
         </div>
 
         <div class="update-info">
-            <strong>📅 Last Updated:</strong> December 4, 2024 | <strong>⚡ Status:</strong> All codes verified
+            <strong>📅 Last Updated:</strong> December 4, 2024 | <strong>⚡ Status:</strong> Codes are being verified - check back soon for updates!
+            <br><br>
+            <strong>💡 Note:</strong> We're currently collecting the latest working codes. Join The Forge's official Discord or check the game page for the most up-to-date codes while we update this page.
         </div>
 
         <!-- Active Codes Section -->
@@ -394,6 +396,19 @@
                 <li><strong>Follow official channels:</strong> Join the game's Discord or follow developers on social media for new codes</li>
                 <li><strong>Bookmark this page:</strong> We update codes regularly to keep you informed</li>
             </ul>
+        </div>
+
+        <!-- Community Contribution Box -->
+        <div class="tips-section" style="background: linear-gradient(135deg, #fff3e0 0%, #ffe0b2 100%); border-left: 4px solid #ff9800;">
+            <h3>🤝 Help Us Keep Codes Updated!</h3>
+            <p>Found a new working code? Help the community by sharing it!</p>
+            <ul>
+                <li>Join The Forge's official Discord server</li>
+                <li>Check the game's social media for new codes</li>
+                <li>Test codes before sharing to ensure they work</li>
+                <li>Let us know if any codes have expired</li>
+            </ul>
+            <p style="margin-top: 1rem;"><strong>Where to find official codes:</strong> Discord, Twitter/X, Game Updates, Special Events</p>
         </div>
 
         <!-- CTA Box -->
